README updated, Research and Bio updated too.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Santiago Restrepo</title>
+  <title>Santiago Restrepo-Garcia</title>
 
-  <meta name="author" content="Santiago Restrepo">
+  <meta name="author" content="Santiago Restrepo-Garcia">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -28,15 +28,16 @@
               <tr style="padding:0px">
                 <td style="padding:2.5%;width:63%;vertical-align:middle">
                   <p class="name" style="text-align: center;">
-                    Santiago Restrepo
+                    Santiago Restrepo-Garcia
                   </p>
-                  <p>I am a researcher Jr at <a href="https://uao.edu.co">Universidad Autonoma de Occidente</a> in Cali
-                    CO
+                  <p>I am a researcher Jr. at <a href="https://uao.edu.co">Universidad Autonoma de Occidente</a> in
+                    Cali,
+                    CO,
                     where I design and build a heat-press machine for bioplastic materials.
-                    Formerly, I was a maintenance engineer Jr at the fast-paced tech start-up <a
-                      href="https://www.kiwibot.com/">Kiwibot</a> where I maintained the mobile delivery fleet at
+                    Formerly, I was a maintenance engineer Jr. at the fast-paced tech start-up <a
+                      href="https://www.kiwibot.com/">Kiwibot</a>, where I maintained the mobile delivery fleet at
                     optimal conditions
-                    to meet quarters goals.
+                    to meet quarters' goals.
                   </p>
 
                   <p>
@@ -45,19 +46,19 @@
                     mobile robotics using Micro Air Vehicles with the guidance of <a
                       href="https://scholar.google.com.au/citations?user=x3M1JlAAAAAJ&hl=en">Victor Romero-Cano</a> at
                     the
-                    Robotics and Autonomous Systems Laboratory. Here I developed <a
+                    Robotics and Autonomous Systems Laboratory. Here, I developed <a
                       href="https://github.com/santiagorg2401/crazykhoreia">CrazyKhoreia</a>, a low-cost image-based
                     path planner
                     for drone light shows in two modes of operation; and <a
-                      href="https://github.com/santiagorg2401/3drobot">3DBot</a>, a mobile platform for large scale
+                      href="https://github.com/santiagorg2401/3drobot">3DBot</a>, a mobile platform for large-scale
                     additive manufacturing.
                   </p>
                   <p>
-                    I am currently looking to converge my career into visual perception for mobile robotics as it has
-                    been my main interest
-                    over the past few years, then I look forward into developing it further in graduate programmes and
-                    research laboratories.
+                    I aspire to converge my career into visual perception for mobile robotics, as it has been my main
+                    interest over the past few years. Then, I look forward to developing it further in graduate
+                    programmes and research laboratories.
                   </p>
+
                   <p style="text-align:center">
                     <a href="mailto:sanrega24@gmail.com">Email</a> &nbsp;/&nbsp;
                     <a href="data/Santiago's CV.pdf">CV</a> &nbsp;/&nbsp;
@@ -126,17 +127,24 @@
                   </a>
                   <br>
 
-                  <a href="https://santiagorg2401.github.io/">Santiago Restrepo-Garcia</a>, <a
-                    href="https://scholar.google.com.au/citations?user=x3M1JlAAAAAJ&hl=en">Victor Romero-Cano</a>
+                  <a href="https://santiagorg2401.github.io/">Santiago Restrepo-Garcia</a>,
+                  <a href="https://scholar.google.com.au/citations?user=x3M1JlAAAAAJ&hl=en">Victor Romero-Cano</a>
                   <br>
                   To be published ...
                   <br>
-                  <a href="https://github.com/santiagorg2401/crazykhoreia">project page</a> /
+                  <a href="https://github.com/santiagorg2401/crazykhoreia">Project page</a> /
                   <a
                     href="https://www.techrxiv.org/articles/preprint/CrazyKhoreia_a_robotic_perception_system_for_UAV_path_planning_from_digital_images/21836868">Pre-print</a>
                   <p></p>
-                  <p>Combining DreamBooth (personalized text-to-image) and DreamFusion (text-to-3D) yields high-quality,
-                    subject-specific 3D assets with text-driven modifications</p>
+                  <p>An image-based path planner for Micro-Air Vehicles (MAV) based on traditional computer vision
+                    algorithms. CrazyKhoreia works as a <a href="https://pypi.org/project/crazyKhoreia/">Python
+                      package</a>
+                    in two modes of operation where both of them feed from a digital image and output a .csv file. The
+                    light-painting mode generates an apparently continuous flight trajectory for long-exposure
+                    photography, whereas the multi-drone formation mode coordinates an MAV swarm into calculated
+                    positions to
+                    resemble the original image.
+                  </p>
                 </td>
               </tr>
             </tbody>
@@ -165,30 +173,24 @@
                 </td>
 
                 <td style="padding:20px;width:75%;vertical-align:middle">
-                  <a href="https://dreambooth3d.github.io/">
-                    <span class="papertitle">CrazyKhoreia, a robotic perception system for MAV path planning from
-                      digital images</span>
+                  <a href="https://github.com/santiagorg2401/3drobot">
+                    <span class="papertitle">3DBot, a mobile robot for large-scale additive manufacturing</span>
                   </a>
                   <br>
 
-                  <a href="https://amitraj93.github.io/">Amit Raj</a>, <a
-                    href="https://www.linkedin.com/in/srinivas-kaza-64223b74">Srinivas Kaza</a>, <a
-                    href="https://poolio.github.io/">Ben Poole</a>, <a href="https://m-niemeyer.github.io/">Michael
-                    Niemeyer</a>, <a href="https://natanielruiz.github.io/">Nataniel Ruiz</a>,
-                  <a href="https://bmild.github.io/">Ben Mildenhall</a>, <a
-                    href="https://scholar.google.com/citations?user=I2qheksAAAAJ">Shiran Zada</a>, <a
-                    href="https://kfiraberman.github.io/">Kfir Aberman</a>, <a
-                    href="http://people.csail.mit.edu/mrub/">Michael Rubinstein</a>,
-                  <strong>Jonathan T. Barron</strong>, <a href="http://people.csail.mit.edu/yzli/">Yuanzhen Li</a>, <a
-                    href="https://varunjampani.github.io/">Varun Jampani</a>
+                  <a href="https://github.com/oscar2001ds">Oscar D. Diaz-Santos</a>,
+                  <a href="https://github.com/Dianavillarraga">Diana S. Villaraga</a>,
+                  <a href="https://santiagorg2401.github.io/">Santiago Restrepo-Garcia</a>
                   <br>
-                  <em>ICCV</em>, 2023
+                  To be published ...
                   <br>
-                  <a href="https://dreambooth3d.github.io/">project page</a> /
-                  <a href="https://arxiv.org/abs/2303.13508">arXiv</a>
+                  <a href="https://github.com/santiagorg2401/3drobot">Project page</a>
                   <p></p>
-                  <p>Combining DreamBooth (personalized text-to-image) and DreamFusion (text-to-3D) yields high-quality,
-                    subject-specific 3D assets with text-driven modifications</p>
+                  <p>3DBot is a robotic mobile platform designed from scratch for large-scale additive manufacturing.
+                    This robot uses omnidirectional wheels to move freely at any direction, this allows the extruder to have virtually unlimited
+                    space across the X and Y axis, while the Z axis is limited by the height of the vertical column. As a fun fact, an early prototype of
+                    CrazyKhoreia allowed 3DBot to draw cartoons on a whiteboard using a marker.
+                  </p>
                 </td>
               </tr>
             </tbody>
@@ -202,7 +204,8 @@
         <td style="padding:0px">
           <br>
           <p style="text-align:right;font-size:small;">
-            Stolen from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>. Updated on Aug. 07 2023.
+            Stolen from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>. Updated on
+            Aug. 07 2023.
           </p>
         </td>
       </tr>
