--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
                     <div class="two" id='db3d_image'><video width=100% height=100% muted autoplay loop>
-                        <source src="images/owl.mp4" type="video/mp4">
+                        <source src="videos/CrazyKhoreia.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                       </video></div>
                     <img src='images/CrazyKhoriea01.png' width="160">
@@ -134,7 +134,8 @@
                   <br>
                   <a href="https://github.com/santiagorg2401/crazykhoreia">Project page</a> /
                   <a
-                    href="https://www.techrxiv.org/articles/preprint/CrazyKhoreia_a_robotic_perception_system_for_UAV_path_planning_from_digital_images/21836868">Pre-print</a>
+                    href="https://www.techrxiv.org/articles/preprint/CrazyKhoreia_a_robotic_perception_system_for_UAV_path_planning_from_digital_images/21836868">Pre-print</a> / 
+                  <a href="https://youtu.be/sDNFkCoAYH4"> Video </a>
                   <p></p>
                   <p>An image-based path planner for Micro-Air Vehicles (MAV) based on traditional computer vision
                     algorithms. CrazyKhoreia works as a <a href="https://pypi.org/project/crazyKhoreia/">Python
@@ -155,10 +156,10 @@
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
                     <div class="two" id='db3d_image'><video width=100% height=100% muted autoplay loop>
-                        <source src="images/owl.mp4" type="video/mp4">
+                        <source src="videos/3DBot.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                       </video></div>
-                    <img src='images/CrazyKhoriea01.png' width="160">
+                    <img src='images/3DBot01.png' width="160">
                   </div>
                   <script type="text/javascript">
                     function db3d_start() {
@@ -184,7 +185,8 @@
                   <br>
                   To be published ...
                   <br>
-                  <a href="https://github.com/santiagorg2401/3drobot">Project page</a>
+                  <a href="https://github.com/santiagorg2401/3drobot">Project page</a> /
+                  <a href="https://youtu.be/O_uH2JtIrn0"> Video</a>
                   <p></p>
                   <p>3DBot is a robotic mobile platform designed from scratch for large-scale additive manufacturing.
                     This robot uses omnidirectional wheels to move freely at any direction, this allows the extruder to have virtually unlimited
