--- a/index.html
+++ b/index.html
@@ -99,24 +99,24 @@
 
             <!-- CrazyKhoreia -->
             <tbody>
-              <tr onmouseout="db3d_stop()" onmouseover="db3d_start()">
+              <tr onmouseout="crazykhoreia_stop()" onmouseover="crazykhoreia_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='db3d_image'><video width=100% height=100% muted autoplay loop>
+                    <div class="two" id='crazykhoreia_image'><video width=100% height=100% muted autoplay loop>
                         <source src="videos/CrazyKhoreia.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                       </video></div>
                     <img src='images/CrazyKhoriea01.png' width="160">
                   </div>
                   <script type="text/javascript">
-                    function db3d_start() {
-                      document.getElementById('db3d_image').style.opacity = "1";
+                    function crazykhoreia_start() {
+                      document.getElementById('crazykhoreia_image').style.opacity = "1";
                     }
 
-                    function db3d_stop() {
-                      document.getElementById('db3d_image').style.opacity = "0";
+                    function crazykhoreia_stop() {
+                      document.getElementById('crazykhoreia_image').style.opacity = "0";
                     }
-                    db3d_stop()
+                    crazykhoreia_stop()
                   </script>
                 </td>
 
@@ -152,24 +152,24 @@
 
             <!-- 3DBot -->
             <tbody>
-              <tr onmouseout="db3d_stop()" onmouseover="db3d_start()">
+              <tr onmouseout="_3dbot_stop()" onmouseover="_3dbot_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='db3d_image'><video width=100% height=100% muted autoplay loop>
+                    <div class="two" id='_3dbot_image'><video width=100% height=100% muted autoplay loop>
                         <source src="videos/3DBot.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                       </video></div>
                     <img src='images/3DBot01.png' width="160">
                   </div>
                   <script type="text/javascript">
-                    function db3d_start() {
-                      document.getElementById('db3d_image').style.opacity = "1";
+                    function _3dbot_start() {
+                      document.getElementById('_3dbot_image').style.opacity = "1";
                     }
 
-                    function db3d_stop() {
-                      document.getElementById('db3d_image').style.opacity = "0";
+                    function _3dbot_stop() {
+                      document.getElementById('_3dbot_image').style.opacity = "0";
                     }
-                    db3d_stop()
+                    _3dbot_stop()
                   </script>
                 </td>
 
