Forgotten image added and attempt on images/videos #2.

--- a/index.html
+++ b/index.html
@@ -96,13 +96,14 @@
 
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-
-            <!-- CrazyKhoreia -->
             <tbody>
+
+              <!-- CrazyKhoreia -->
               <tr onmouseout="crazykhoreia_stop()" onmouseover="crazykhoreia_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='crazykhoreia_image'><video width=100% height=100% muted autoplay loop>
+                    <div class="two" id="crazykhoreia_image" style="opacity: 0;"><video width="100%" height="100%"
+                        muted="" autoplay="" loop="">
                         <source src="videos/CrazyKhoreia.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                       </video></div>
@@ -134,7 +135,8 @@
                   <br>
                   <a href="https://github.com/santiagorg2401/crazykhoreia">Project page</a> /
                   <a
-                    href="https://www.techrxiv.org/articles/preprint/CrazyKhoreia_a_robotic_perception_system_for_UAV_path_planning_from_digital_images/21836868">Pre-print</a> / 
+                    href="https://www.techrxiv.org/articles/preprint/CrazyKhoreia_a_robotic_perception_system_for_UAV_path_planning_from_digital_images/21836868">Pre-print</a>
+                  /
                   <a href="https://youtu.be/sDNFkCoAYH4"> Video </a>
                   <p></p>
                   <p>An image-based path planner for Micro-Air Vehicles (MAV) based on traditional computer vision
@@ -148,14 +150,14 @@
                   </p>
                 </td>
               </tr>
-            </tbody>
 
-            <!-- 3DBot -->
-            <tbody>
+
+              <!-- 3DBot -->
               <tr onmouseout="_3dbot_stop()" onmouseover="_3dbot_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='_3dbot_image'><video width=100% height=100% muted autoplay loop>
+                    <div class="two" id="_3dbot_image" style="opacity: 0;"><video width="100%" height="100%" muted=""
+                        autoplay="" loop="">
                         <source src="videos/3DBot.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                       </video></div>
@@ -189,13 +191,14 @@
                   <a href="https://youtu.be/O_uH2JtIrn0"> Video</a>
                   <p></p>
                   <p>3DBot is a robotic mobile platform designed from scratch for large-scale additive manufacturing.
-                    This robot uses omnidirectional wheels to move freely at any direction, this allows the extruder to have virtually unlimited
-                    space across the X and Y axis, while the Z axis is limited by the height of the vertical column. As a fun fact, an early prototype of
+                    This robot uses omnidirectional wheels to move freely at any direction, this allows the extruder to
+                    have virtually unlimited
+                    space across the X and Y axis, while the Z axis is limited by the height of the vertical column. As
+                    a fun fact, an early prototype of
                     CrazyKhoreia allowed 3DBot to draw cartoons on a whiteboard using a marker.
                   </p>
                 </td>
               </tr>
-            </tbody>
           </table>
 
     </tbody>
