--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <source src="videos/CrazyKhoreia.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                       </video></div>
-                    <img src='images/CrazyKhoriea01.png' width="160">
+                    <img src='images/CrazyKhoreia01.png' width="160">
                   </div>
                   <script type="text/javascript">
                     function crazykhoreia_start() {
