Education, and Course and certificates sections added.

--- a/index.html
+++ b/index.html
@@ -201,8 +201,58 @@
               </tr>
           </table>
 
+          <!-- Education -->
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <h2>Education</h2>
+                  <li><strong>Mechatronics Engineering BEng</strong>. Universidad Autonoma de Occidente. Cali, Colombia.</li>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <!-- Courses and Certifications -->
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <h2>Courses and Certifications</h2>
+                  <li><strong>TensorFlow Developer Certificate in 2023: Zero to Mastery</strong> by Udemy. An all-hands
+                    course practical course oriented on learning deep learning concepts and TensorFlow. [On going]</li>
+                  <li><strong>PyTorch for Deep Learning in 2023: Zero to Mastery</strong> by Udemy. A practical course
+                    to acquire PyTorch and deep learning skills. [On going] </li>
+                  <li><strong>RWTH Aachen University: Mathematical Optimization for Engineers [audit track]</strong> by
+                    RWTH Aachen University in
+                    EdX. A graduate course to learn the mathematical and computational basics on optimization.
+                    [On going]
+                  </li>
+                  <li><strong>Learn ROS2 as a ROS1 Developer and Migrate Your ROS Projects</strong> by Udemy. A
+                    ROS2 migratory course.<a
+                      href="https://www.udemy.com/certificate/UC-ba229781-e8f4-42d4-80c7-c27bbdb10fe0/">[Credential Dec
+                      2022]</a>
+                  </li>
+                  <li><strong>Introduction to Programming in C++ [audit track]</strong> by EdX. A C++ beginner course.
+                    [Dec 2022]
+                  </li>
+                  <li><strong>Advanced Programming in C++ [audit track]</strong> by EdX. A C++ intermediate course. [Dec
+                    2022]</li>
+                  <li><strong>Object Oriented Implementation Using C++ [audit track]</strong> by EdX. A C++ intermediate
+                    course using OOP. [Dec 2022]</li>
+                  <li><strong>Machine Learning</strong> by Standford Online, Coursera. An introductory course
+                    that covers the basics on Machine Learning. <a
+                      href="https://www.coursera.org/verify/8KSELSWJBWLG">[Credential Dec 2020]</a></li>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
     </tbody>
   </table>
+
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tbody>
       <tr>
