--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   </p>
                   <p>
                     I aspire to converge my career into visual perception for mobile robotics, as it has been my main
-                    interest over the past few years. Then, I look forward to developing it further in graduate
+                    interest over the past few years. Then, I look forward to develop it further in graduate
                     programmes and research laboratories.
                   </p>
 
@@ -260,7 +260,7 @@
           <br>
           <p style="text-align:right;font-size:small;">
             Stolen from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>. Updated on
-            Aug. 07 2023.
+            Aug. 11 2023.
           </p>
         </td>
       </tr>
