--- a/index.html
+++ b/index.html
@@ -214,22 +214,29 @@
             </tbody>
           </table>
 
-          <!-- Courses and Certifications -->
+          <!-- Certifications -->
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
-                  <h2>Courses and Certifications</h2>
-                  <li><strong>TensorFlow Developer Certificate in 2023: Zero to Mastery</strong> by Udemy. An all-hands
-                    course practical course oriented on learning deep learning concepts and TensorFlow. [On going]</li>
+                  <h2>Courses</h2>
+                  <li><strong>TensorFlow Developer Certificate </strong> <a href="https://www.credential.net/6856f280-d62a-4cd8-8352-6d868070c13e"> [Credential Feb 2024] </a> </li>
+              </tr>
+            </tbody>
+          </table>
+
+          <!-- Courses -->
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <h2>Courses</h2>
                   <li><strong>PyTorch for Deep Learning in 2023: Zero to Mastery</strong> by Udemy. A practical course
                     to acquire PyTorch and deep learning skills. [On going] </li>
-                  <li><strong>RWTH Aachen University: Mathematical Optimization for Engineers [audit track]</strong> by
-                    RWTH Aachen University in
-                    EdX. A graduate course to learn the mathematical and computational basics on optimization.
-                    [On going]
-                  </li>
+                  <li><strong>TensorFlow Developer Certificate in 2023: Zero to Mastery</strong> by Udemy. An all-hands
+                    course practical course oriented on learning deep learning concepts and TensorFlow. [Feb 2024]</li>
                   <li><strong>Learn ROS2 as a ROS1 Developer and Migrate Your ROS Projects</strong> by Udemy. A
                     ROS2 migratory course.<a
                       href="https://www.udemy.com/certificate/UC-ba229781-e8f4-42d4-80c7-c27bbdb10fe0/">[Credential Dec
@@ -260,7 +267,7 @@
           <br>
           <p style="text-align:right;font-size:small;">
             Stolen from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>. Updated on
-            Aug. 11 2023.
+            Feb. 12 2024.
           </p>
         </td>
       </tr>
