--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
                   <p class="name" style="text-align: center;">
                     Santiago Restrepo-Garcia
                   </p>
-                  <p>I am a researcher Jr. at <a href="https://uao.edu.co">Universidad Autonoma de Occidente</a> in
-                    Cali,
-                    CO,
-                    where I design and build a heat-press machine for bioplastic materials.
-                    Formerly, I was a maintenance engineer Jr. at the fast-paced tech start-up <a
+                  <p>I am a Mechatronics Engineer based in Cali, Colombia.
+                    Formerly, I was a Researcher Jr. at <a href="https://uao.edu.co">Universidad Autonoma de Occidente</a>
+                    where I designed and built a heat-press machine for bioplastic materials.
+                    Later on, I was a Maintenance Engineer Jr. at the fast-paced tech start-up <a
                       href="https://www.kiwibot.com/">Kiwibot</a>, where I maintained the mobile delivery fleet at
                     optimal conditions
                     to meet quarters' goals.
@@ -54,7 +53,7 @@
                     additive manufacturing.
                   </p>
                   <p>
-                    I aspire to converge my career into visual perception for mobile robotics, as it has been my main
+                    I aspire to converge my career into visual perception for mobile robotics and AI, as it has been my main
                     interest over the past few years. Then, I look forward to develop it further in graduate
                     programmes and research laboratories.
                   </p>
@@ -185,7 +184,6 @@
                   <a href="https://github.com/Dianavillarraga">Diana S. Villaraga</a>,
                   <a href="https://santiagorg2401.github.io/">Santiago Restrepo-Garcia</a>
                   <br>
-                  To be published ...
                   <br>
                   <a href="https://github.com/santiagorg2401/3drobot">Project page</a> /
                   <a href="https://youtu.be/O_uH2JtIrn0"> Video</a>
@@ -220,7 +218,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
-                  <h2>Courses</h2>
+                  <h2>Certifications</h2>
                   <li><strong>TensorFlow Developer Certificate </strong> <a href="https://www.credential.net/6856f280-d62a-4cd8-8352-6d868070c13e"> [Credential Feb 2024] </a> </li>
               </tr>
             </tbody>
@@ -267,7 +265,7 @@
           <br>
           <p style="text-align:right;font-size:small;">
             Stolen from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>. Updated on
-            Feb. 12 2024.
+            Mar. 7 2024.
           </p>
         </td>
       </tr>
