--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   <p class="name" style="text-align: center;">
                     Santiago Restrepo-Garcia
                   </p>
-                  <p>I am a Mechatronics Engineer based in Cali, Colombia.
+                  <p>I am a Mechatronics Engineer based in the US.
                     Formerly, I was a Researcher Jr. at <a href="https://uao.edu.co">Universidad Autonoma de Occidente</a>
                     where I designed and built a heat-press machine for bioplastic materials.
                     Later on, I was a Maintenance Engineer Jr. at the fast-paced tech start-up <a
@@ -265,7 +265,7 @@
           <br>
           <p style="text-align:right;font-size:small;">
             Stolen from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>. Updated on
-            Mar. 7 2024.
+            July. 13 2024.
           </p>
         </td>
       </tr>
