--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                   <p style="text-align:center">
                     <a href="mailto:sanrega24@gmail.com">Email</a> &nbsp;/&nbsp;
-                    <a href="data/Santiago's CV.pdf">CV</a> &nbsp;/&nbsp;
+                    <a href="data/SR's CV - Robotics Engineer.pdf">CV</a> &nbsp;/&nbsp;
                     <a href="https://www.linkedin.com/in/srestrepogarcia/">LinkedIn</a> &nbsp;/&nbsp;
                     <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
                     <!-- <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp;/&nbsp; -->
@@ -130,7 +130,7 @@
                   <a href="https://santiagorg2401.github.io/">Santiago Restrepo-Garcia</a>,
                   <a href="https://scholar.google.com.au/citations?user=x3M1JlAAAAAJ&hl=en">Victor Romero-Cano</a>
                   <br>
-                  To be published ...
+                  https://link.springer.com/article/10.1007/s42979-025-04015-z
                   <br>
                   <a href="https://github.com/santiagorg2401/crazykhoreia">Project page</a> /
                   <a
@@ -265,7 +265,7 @@
           <br>
           <p style="text-align:right;font-size:small;">
             Stolen from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>. Updated on
-            July. 13 2024.
+            July 1st, 2025.
           </p>
         </td>
       </tr>
