--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <a href="https://santiagorg2401.github.io/">Santiago Restrepo-Garcia</a>,
                   <a href="https://scholar.google.com.au/citations?user=x3M1JlAAAAAJ&hl=en">Victor Romero-Cano</a>
                   <br>
-                  https://link.springer.com/article/10.1007/s42979-025-04015-z
+                  <a href="https://link.springer.com/article/10.1007/s42979-025-04015-z">Paper page (open access)</a> /
                   <br>
                   <a href="https://github.com/santiagorg2401/crazykhoreia">Project page</a> /
                   <a
